--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.github.sanctuuary/APE -->
+		<dependency>
+			<groupId>io.github.sanctuuary</groupId>
+			<artifactId>APE</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
