--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,26 @@
 	<version>0.2.2</version>
 	<name>restape</name>
 	<description>RESTful API for the APE library</description>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<name>Vedran Kasalica</name>
+			<email>v.kasalica@esciencecenter.nl</email>
+			<organization>Netherlands eScience Center</organization>
+			<organizationUrl>https://www.esciencecenter.nl/</organizationUrl>
+		</developer>
+	</developers>
+	<scm>
+		<connection>scm:git:git://github.com/sanctuuary/RESTAPE.git</connection>
+		<developerConnection>scm:git:ssh://github.com:sanctuuary/RESTAPE.git</developerConnection>
+		<url>https://github.com/sanctuuary/RESTAPE/tree/master</url>
+	</scm>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -56,7 +76,7 @@
 		<dependency>
 			<groupId>io.github.sanctuuary</groupId>
 			<artifactId>APE</artifactId>
-			<version>2.1.3</version>
+			<version>2.1.5</version>
 		</dependency>
 		
 		<dependency>
