--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,4 +34,5 @@ jobs:
 
      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
+      continue-on-error: true
       uses: advanced-security/maven-dependency-submission-action@v3
