--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,6 +1,8 @@
-name: Build and Publish
+name: Build and Publish docker image
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
 
 env:
   REGISTRY: ghcr.io
