--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -49,7 +49,8 @@ jobs:
 
       - name: Install Arial font
         run: |
-          apt-get update && apt-get install -y ttf-mscorefonts-installer
+          sudo apt-get update
+          sudo apt-get install -y ttf-mscorefonts-installer
 
           
       - name: Push Docker image
