--- a/.github/workflows/clean-containers.yaml
+++ b/.github/workflows/clean-containers.yaml
@@ -10,17 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
+    env:
+      REGISTRY: ghcr.io
     steps:
       - name: downcase REPO name
         run: |
-          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+          echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
       - name: Delete 'PR' containers older than a week
         uses: snok/container-retention-policy@v2.1.3
         with:
           image-names: ${{ env.REGISTRY }}/${{ env.REPO }}
-          filter-tags: sha-*,sha256:*
+          filter-tags: "sha-*,sha256:*"
           skip-tags: latest
-          cut-off: A week ago UTC
+          cut-off: "A week ago UTC"
           account-type: org
           org-name: ${{ github.repository_owner }}
           keep-at-least: 1
