--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,6 +1,7 @@
 name: "Build and Publish docker image"
 
 on:
+  workflow_dispatch:  # This line adds the manual trigger
   push:
     branches: [ "main" ]
 
