--- a/.github/workflows/clean-containers.yaml
+++ b/.github/workflows/clean-containers.yaml
@@ -1,6 +1,9 @@
 name: "Clean the old docker images"
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:  # Manual trigger
   schedule:
     - cron: "21 21 * * *"  # Scheduled run
