--- a/.github/workflows/clean-containers.yaml
+++ b/.github/workflows/clean-containers.yaml
@@ -15,15 +15,13 @@ jobs:
       REGISTRY: ghcr.io
 
     steps:
-      - name: Set REPO environment variable
-        run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
-
       - name: Delete 'PR' containers older than a week
         uses: snok/container-retention-policy@v3.0.0
         with:
           account: sanctuuary
-          image-names: "!latest"
+          image-names: "!empty"
           token: ${{ secrets.GH_REPO_TOKEN }}
+          image-tags: "!latest"
           cut-off: 2w 3d
           dry-run: true
 
