--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
