gitignore the `.env` file

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ nb-configuration.xml
 src/main/resources/comet.json
 src/main/resources/peptideprophet.json
 src/main/resources/proteinprophet.json
+.env
